# devpkgs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mergea.sh  mkpkg.sh  xcfwk.sh
.github/actions/install-llvm/: action.yml
.github/workflows/: build.yml  no-lto.yml
projects/: CMakeLists.txt
projects/dav1d/: CMakeLists.txt
projects/fribidi/: CMakeLists.txt  fribidi-gen.cmake  fribidi-lib.cmake
projects/libass/: CMakeLists.txt
projects/libass/patches/: 0001-Android-font-provider.patch
projects/libva_loader/: CMakeLists.txt
src/libshaderc_loader/: CMakeLists.txt  shaderc.pc.in  shaderc_loader.cpp
