set(SRC_DIR ${CMAKE_SOURCE_DIR}/src/fribidi)
if(BUILD_LIBASS)
  message("Configuring fribidi...")
  add_subdirectory(fribidi)
endif()
set(SRC_DIR ${CMAKE_SOURCE_DIR}/src/libass)
if(BUILD_LIBASS)
  message("Configuring libass...")
  add_subdirectory(libass)
endif()

set(SRC_DIR ${CMAKE_SOURCE_DIR}/src/dav1d)
if(BUILD_DAV1D)
  message("Configuring dav1d...")
  add_subdirectory(dav1d)
endif()
